<resources>
    <string name="app_name">SQLiteApplication</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="dob">Date of Birth</string>
    <string name="btnInsert">INSERT NEW DATA</string>
    <string name="btnUpdate">UPDATE THE DATA</string>
    <string name="btnDelete">DELETE THE EXITING DATA</string>
    <string name="btnView">VIEW DATA</string>
    <string name="view_results">Results</string>

</resources>
