<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/name"
            android:textColor="#009688"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/Dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/dob"
            android:textColor="#090808"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/Contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/contact"
            android:textColor="#171515"
            android:textSize="16sp" />


</LinearLayout>

</androidx.cardview.widget.CardView>